<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/sv_dish"
    android:fillViewport="false">

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="by.bsu.battleroy.pmvs_lab03.activities.DishActivity">

        <TextView
            android:id="@+id/tv_dish_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/dish_name"
            android:textAppearance="@style/contentTextStyle"
            android:textColor="@color/colorPrimaryText"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="24sp" />

  <!--      <ImageView
            android:id="@+id/iv_dish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/dish_desc"
            android:longClickable="false"
            android:src="@drawable/eda"
            android:layout_below="@+id/tv_dish_name"
            android:layout_centerHorizontal="true"
            android:scaleType="fitCenter" />   -->

        <!--android:layout_below="@+id/iv_dish" -->
        <TextView
            android:id="@+id/tv_publisher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_dish_name"
            android:text="@string/publisher"
            android:textAppearance="@style/contentTextStyle"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textColor="@color/colorPrimaryText" />

        <TextView
            android:id="@+id/tv_ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_publisher_name"
            android:text="@string/ingredients"
            android:textAppearance="@style/contentTextStyle"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textColor="@color/colorPrimaryText" />

        <TextView
            android:id="@+id/tv_ingredients_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_ingredients"
            android:text="@string/lorem"
            android:textAppearance="@style/contentTextStyle"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_ingredients_body"
            android:text="@string/rating"
            android:textAppearance="@style/contentTextStyle"
            android:textStyle="bold"
            android:singleLine="false"
            android:password="false"
            android:textSize="22sp"
            android:textColor="@color/colorPrimaryText" />

        <TextView
            android:id="@+id/tv_publisher_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_publisher"
            android:text="New Text"
            android:textAppearance="@style/contentTextStyle"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp" />

        <RatingBar
            android:id="@+id/rb_dish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_rating"
            android:numStars="5"
            android:rating="4.3"
            android:isIndicator="true"/>
    </RelativeLayout>
</ScrollView>
